# pokemon-data-extractor

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: abc_managers.py  constants.py  error_handler.py  exceptions.py  job_organizer.py  job_status.py  main.py  queue_workers.py
src/data_extractors/: api_extractor.py  data_extractor_manager.py
src/data_savers/: abstract_data_saver.py  data_saver_manager.py  json_file_saver.py
src/test/: conftest.py  pytest.ini  test_data_extractor_organizer.py
src/test/test_data_extractors/: test_data_extractor_manager.py  test_pokemon_rest_api_extractor.py
src/test/test_data_savers/: test_data_saver_manager.py
test/: conftest.py  pytest.ini  test_data_extractor_organizer.py
test/test_data/: rest_api_200_response.json
test/test_data_extractors/: test_data_extractor_manager.py  test_pokemon_rest_api_extractor.py
test/test_data_savers/: test_data_saver_manager.py  test_json_file_saver.py
