[tool.poetry]
name = "pokemon-data-extractor"
version = "0.1.0"
description = "extract pokemon data with pokemon API"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pokemon_data_extractor"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
